Fix contrast issue with breadcrumb link focus styles

--- a/ds_judgements_public_ui/sass/includes/_header.scss
+++ b/ds_judgements_public_ui/sass/includes/_header.scss
@@ -16,7 +16,7 @@
       font-size: 0.9rem;
 
       a {
-        color: $color__white;
+        @include link-on-dark-bg;
       }
     }
 
